@@ -1,6 +1,8 @@
 What's New
 - Fixed an issue causing the wrong talent spell link to be printed when the second choice in selection nodes was chosen.
 - Fixed an issue (hopefully) that allowed the Quest Mobs icon to remain on the nameplate even after the quest objective was completed.
+- Fixed an issue that prevented quests from being completed when 'All Quests' is enabled.
 - Players can now hold the SHIFT key to temporarily pause quest-related automation.
-- Players can now toggle a setting to ignore repeatable quests. Hopefully you can save your precious Iskaara supplies! (Resolves #81)
+- [NEEDS TESTING] Players can now toggle a setting to ignore repeatable quests. Hopefully you can save your precious Iskaara supplies! (Resolves #81)
+- Players can now select 'Item Level' from the Quest Rewards dropdown.
 - The '/wave' emote to Gor'groth has been removed.
